--- a/Lesson-2/DigitalKeyboard/app/src/main/res/values/strings.xml
+++ b/Lesson-2/DigitalKeyboard/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="_7">7</string>
     <string name="_8">8</string>
     <string name="_9">9</string>
+    <string name="_0">0</string>
+    <string name="_point">.</string>
 </resources>
