ActivityState: Обработка нажатий - первый способ, через onClick в макете

--- a/Lesson-3/ActivityState/app/src/main/res/values/strings.xml
+++ b/Lesson-3/ActivityState/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Activity State</string>
+    <string name="counter_1">Counter on click</string>
+    <string name="_0">0</string>
 </resources>
