--- a/Lesson-3/ActivityState/app/src/main/res/values/strings.xml
+++ b/Lesson-3/ActivityState/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Activity State</string>
     <string name="counter_1">Counter on click</string>
+    <string name="counter_2">Counter click listener</string>
     <string name="_0">0</string>
 </resources>
