--- a/Lesson-4/Login/app/src/main/res/values/strings.xml
+++ b/Lesson-4/Login/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Login</string>
+    <string name="loginName">login</string>
+    <string name="password">password</string>
 </resources>
