Login: Установка тем

--- a/Lesson-4/Login/app/src/main/res/values/strings.xml
+++ b/Lesson-4/Login/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Login</string>
     <string name="loginName">login</string>
     <string name="password">password</string>
+    <string name="my_cool_style">My cool style</string>
+    <string name="material_light">Material light</string>
+    <string name="material_light_action_bar_dark">Material light action bar dark</string>
+    <string name="material_dark">Material dark</string>
 </resources>
