--- a/Lesson-4/Login/app/src/main/res/values/strings.xml
+++ b/Lesson-4/Login/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="material_light">Material light</string>
     <string name="material_light_action_bar_dark">Material light action bar dark</string>
     <string name="material_dark">Material dark</string>
+    <string name="not_name">Login is wrong!</string>
+    <string name="weak_password">Password is weak!</string>
 </resources>
