--- a/Lesson-5/Account/app/src/main/res/values/strings.xml
+++ b/Lesson-5/Account/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Account</string>
+    <string name="your_name">Your name</string>
+    <string name="greetings">Greetings</string>
+    <string name="account">Account</string>
+    <string name="say_hello">Hello,\u0020</string>
 </resources>
