--- a/Lesson-7/FragmentNavigation/app/src/main/res/values/strings.xml
+++ b/Lesson-7/FragmentNavigation/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Fragment Navigation</string>
+    <string name="delete_before_add">Delete before add</string>
+    <string name="back_as_remove_fragment">Back as remove fragment</string>
+    <string name="replace">replace</string>
+    <string name="add">add</string>
+    <string name="new_fragment">New fragment:</string>
+    <string name="use_backstack">Use backstack</string>
+    <string name="main_screen">Main screen</string>
+    <string name="favorite_screen">Favorite screen</string>
+    <string name="settings">Settings</string>
+    <string name="favorite">Favorite</string>
+    <string name="main">Main</string>
+    <string name="back">Back</string>
 </resources>
