FragmentNavigation: Добавление главного меню

--- a/Lesson-7/FragmentNavigation/app/src/main/res/values/strings.xml
+++ b/Lesson-7/FragmentNavigation/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="favorite">Favorite</string>
     <string name="main">Main</string>
     <string name="back">Back</string>
+    <string name="search">search</string>
 </resources>
